--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,21 @@
 {
-    "require": {
-        "illuminate/support": "^5.5"
+  "require": {
+    "illuminate/support": "^5.5",
+    "phpunit/phpunit": "~5.7",
+    "illuminate/container": "^5.5"
+  },
+
+  "autoload": {
+    "psr-4": {
+      "App\\": "App/",
+      "Bootstrap\\": "Bootstrap/",
+      "Infrastructure\\": "Infrastructure/"
     }
+  },
+  "autoload-dev": {
+    "classmap": [
+      "Tests/"
+    ]
+  }
 }
+
