--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
     "illuminate/support": "^5.5",
-    "phpunit/phpunit": "~5.7",
+    "phpunit/phpunit": "~7.0.2",
     "illuminate/container": "^5.5",
     "predis/predis": "^1.1"
   },
@@ -12,9 +12,9 @@
     }
   },
   "autoload-dev": {
-    "classmap": [
-      "Benchmarks",
-      "Tests/"
-    ]
+    "psr-4": {
+      "ProjectionistBenchmarks\\": "benchmarks/",
+      "ProjectonistTests\\": "tests/"
+    }
   }
 }
