Switch to latest PHPunit

--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     }
   },
   "autoload-dev": {
-    "psr-4": {
-      "ProjectionistBenchmarks\\": "benchmarks/",
-      "ProjectonistTests\\": "tests/"
-    }
+    "classmap": [
+      "benchmarks",
+      "tests/"
+    ]
   }
 }
