--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
     "illuminate/support": "^5.5",
-    "phpunit/phpunit": "~7.0.2",
+    "phpunit/phpunit": "^6.0",
     "illuminate/container": "^5.5",
     "predis/predis": "^1.1"
   },
